Fix scroll ussue on firefox in schedule

--- a/src/static/styles/core.scss
+++ b/src/static/styles/core.scss
@@ -846,6 +846,10 @@ article {
         }
     }
 
+    .rightcol {
+        overflow-y: scroll;
+    }
+
     .eventslist {
         margin:auto;
 
